--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,7 @@
   "private": true,
   "devDependencies": {
     "backbone": ">= 1.0.0",
+    "jquery": ">= 2.0.0",
     "qunit": ">= 1.12.0",
     "underscore": ">= 1.5.0"
   }
